# Caso_Practico_Semillero_IA

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.test  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  accion_agent.py  arquitectura_agent.py  base_agent.py  catalogo_agent.py  multimodal_agent.py  politicas_agent.py  proceso_ventas_agent.py  produccion_agent.py  registry.py  seguridad_agent.py  soporte_agent.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  classifier.py  exceptions.py  llm.py  orchestrator.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/evaluation/: __init__.py  rubrica.py
backend/app/models/: __init__.py  audit_log.py  base.py  conversation.py  evaluation.py  message.py  opportunity.py
backend/app/prompts/: accion_prompt.md  arquitectura_prompt.md  catalogo_prompt.md  classifier_prompt.md  multimodal_prompt.md  orchestrator_prompt.md  politicas_prompt.md  proceso_ventas_prompt.md  produccion_prompt.md  seguridad_prompt.md  soporte_prompt.md
backend/app/rag/: __init__.py  embeddings.py  loader.py  retriever.py  (+2 more)
backend/data/: app.db  mesa_ayuda_fallback.db  registro_oportunidades.txt
backend/scripts/: evaluate.py  healthcheck.py  ingest.py  seed_db.py  test_production.py
backend/tests/: conftest.py  golden_dataset.json  test_golden_regression.py
(+68 files in other folders)
